--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -3,14 +3,10 @@ name: Codeclub-viewer
 on:
   push:
     branches:
-      - '*'
+      - master
   pull_request:
     branches:
       - master
-
-concurrency:
-  group: ${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build:
@@ -21,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '10.16.0'
+          node-version: '10'
       - name: Cache Node Modules
         id: cache-node-modules
         uses: actions/cache@v2
