--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -14,16 +14,11 @@ jobs:
     timeout-minutes: 3
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout Code
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '10'
-      - name: Cache Node Modules
-        id: cache-node-modules
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('yarn.lock') }}
       - name: Clone exercises
         run: git clone --depth=1 --branch=master https://github.com/kodeklubben/oppgaver.git ../oppgaver
       - name: Install Dependencies
@@ -44,7 +39,7 @@ jobs:
 
   deploy:
     name: Deploy to GithubPages
-    timeout-minutes: 3
+    timeout-minutes: 5
     needs: build
     if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
     runs-on: ubuntu-latest
